--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,13 +2,13 @@
 
 <%= form_for(@song) do |f| %>
   <label>Song name:</label><br>
-  <%= f.text_field :song[:name] %><br>
+  <%= f.text_field :name %><br>
 
   <label>Song artist</label><br>
-  <%= f.text_field :song[:artist_id] %><br>
+  <%= f.text_field :artist_id %><br>
 
   <label>Song genre</label><br>
-  <%= f.text_field :song[:genre_id] %><br>
+  <%= f.text_field :genre_id %><br>
 
   <%= f.submit %>
 <% end %>
