--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,6 +1,11 @@
-<% @genres.each do |genre| %>
-<<ul>
-    <div><%= artist.name %></div>
-</ul>
+<h2>All Genres</h2>
 
-<% end %>
+<%= link_to 'create a new genre', new_genre_path %>
+
+<ul>
+  <% @genres.each do |genre| %>
+    <li>
+      <%= link_to genre.name, genre %>
+    </li>
+  <% end %>
+</ul>
