--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,9 +1,17 @@
 <%= form_for @song do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.label :artist_id %>
-<%= f.text_field :artist_id %>
-<%= f.label :genre_id %>
-<%= f.text_field:genre_id %>
-<%= f.submit %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :artist_id %>
+
+  <%= f.collection_select :artist_id, Artist.all, :id, :name %>
+
+  <% if false %>
+  <%= f.collection_select :ends_up_in_params_as_key, Model.all, :ends_up_in_params_as_value, :display_method %>
+  <% end %>
+
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+
+  <%= f.submit %>
 <% end %>
